--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -266,6 +266,7 @@ Grid and Bar
   padding-bottom:2rem;
   @include border-radius($layout-border-radius);
   position:relative;
+  /* margin-bottom: $pard-grid-spacing; */
 }
 
 .pard-header-container{
@@ -475,7 +476,7 @@ button{
   width: $pard-aside-width;
   z-index: 20;
   margin-bottom: -4.8rem;
-  padding-bottom:$pard-grid-spacing;
+  padding-bottom: $pard-grid-spacing;
 
 }
 
@@ -1338,6 +1339,9 @@ HEADER
   @include breakpoint(medium down){
     padding: 0.5rem;
   }
+  .pard-grid{
+    padding-top: .15rem;
+  }
 }
 .black{
   background-color: black;
@@ -1368,7 +1372,7 @@ HEADER
 }
 
 .black .logo-header{
-  background-image: url(<%= image_path 'lettering_white_m.png' %>);
+  background-image: url(<%= image_path 'lettering_white_xl.png' %>);
 }
 
 .container-loginNavHeader{
@@ -1897,7 +1901,7 @@ button.footer-text-link:hover{
 }
 
 .logoOrfheo-contactInfo{
-  background-image: url(<%= image_path 'lettering_white_m.png' %>);
+  background-image: url(<%= image_path 'lettering_white_xl.png' %>);
   width: 112px;
   height: 35px;
   background-repeat: no-repeat;
@@ -2009,6 +2013,22 @@ select, textarea, a{
 
 select:-moz-focusring { color: transparent;
                         text-shadow: 0 0 0 #000; }
+
+.TextAreaEnrichedContainer{
+  .trumbowyg-box{
+    min-height: 11rem;
+    margin: 0;
+  }
+  .trumbowyg-editor{
+    font-size: $almostNormalSize;
+    min-height: 11rem;
+    padding: .5rem;
+    p{
+      line-height: 1.2rem;
+      margin-bottom: 0.6rem;
+    }
+  }
+}
 
 .popup-form button {
   outline: none;
@@ -2480,7 +2500,7 @@ IMAGES
 ================================================*/
 
 .orfheo-symbol-popup{
-  background-image: url(<%= image_path 'orfheosimbolocolor.png' %>);
+  background-image: url(<%= image_path 'logo_black_xl.png' %>);
   width: 100px;
   height: 69px;
   background-repeat: no-repeat;
@@ -2508,7 +2528,7 @@ IMAGES
 
 .logo-header{
   cursor: pointer;
-  background-image: url(<%= image_path 'lettering_black_m.png' %>);
+  background-image: url(<%= image_path 'lettering_black_xxl.png' %>);
   width: 77px;
   height: 24px;
   background-repeat: no-repeat;
