redesigning header step 1

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -8,7 +8,7 @@ main.mainWelcomePage{
   margin: 0;
   padding: 0;
   section{
-    padding-top:3.3rem;
+    /* padding-top:3.3rem; */
     padding-bottom: 1.8rem;
     min-height: 100vh;
   }
