--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1335,12 +1335,9 @@ HEADER
   font-size: $almostNormalSize;
   z-index: 3;
   position: relative;
-  min-height: 3.3rem;
+  /* min-height: 5rem; */
   @include breakpoint(medium down){
     padding: 0.5rem;
-  }
-  .pard-grid{
-    padding-top: .15rem;
   }
 }
 .black{
@@ -1348,6 +1345,13 @@ HEADER
 }
 .fixed{
   position: fixed;
+}
+
+.upperContainerHeader{
+  height: 100%;
+  width: 100%;
+  height: 3rem;
+  z-index: 2;
 }
 
 .containerHeader{
@@ -1358,12 +1362,18 @@ HEADER
 
 .contentHeader{
   position: relative;
+}
+
+.navBarHeader{
+  height: 5rem;
+  position: relative;
   width: 100%;
-  height: 100%;
+  padding-top: 3rem;
 }
 
 .logoBtn-navHeader{
   display: inline-block;
+  @include horizontal-center;
   margin-top: 0.8rem;
   /* @include horizontal-center; */
   button{
@@ -1447,9 +1457,7 @@ HEADER
 }
 
 .navMenuHeader-container{
-  position: relative;
-  display: inline-block;
-  vertical-align: 1px;
+  @include horizontal-center;
 }
 
 .signUpBtn-container{
@@ -1524,7 +1532,7 @@ HEADER
   color: white;
   font-weight: bold;
   vertical-align: middle;
-  right: 12rem;
+  left: 0rem;
   top: .8rem;
   position: absolute;
 }
