available name is checked on the spot

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -127,6 +127,10 @@ a.profileCard:hover{
   border:1px solid red !important;
 }
 
+.available{
+  border:1px solid lime !important;
+}
+
 .checkBox-warning{
   outline: 1px solid red;
 }
