--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1352,9 +1352,8 @@ HEADER
 }
 
 .upperContainerHeader{
-  height: 100%;
-  width: 100%;
-  height: 3rem;
+  width: 100vw;
+  height: 2.8rem;
   z-index: 2;
 }
 
@@ -1369,24 +1368,47 @@ HEADER
 }
 
 .navBarHeader{
-  height: 5rem;
+  height: 4.2rem;
   position: relative;
   width: 100%;
-  padding-top: 3rem;
+  padding-top: 2.5rem;
 }
 
 .logoBtn-navHeader{
   display: inline-block;
   @include horizontal-center;
-  margin-top: 0.8rem;
-  /* @include horizontal-center; */
+  margin-top: 0.7rem;
+  position: relative;
   button{
     margin: 0;
   }
 }
 
 .black .logo-header{
-  background-image: url(<%= image_path 'lettering_white_xl.png' %>);
+  background-image: url(<%= image_path 'logo_white_m.png' %>);
+}
+
+.semiCircleHeaderTop, .semiCircleHeaderBottom{
+  background: black;
+  @include border-radius(50%);
+  width: 59px;
+  height: 59px;
+  @include horizontal-center;
+  z-index: -1;
+  position: relative;
+}
+
+.semiCircleHeaderTop{
+  top: -8px;
+}
+
+.semiCircleHeaderBottom{
+  top: -26px;
+}
+
+.semiCircleHeaderTop-container{
+  width: 100vw;
+  position: fixed;
 }
 
 .container-loginNavHeader{
@@ -1408,7 +1430,7 @@ HEADER
 .loginContainer{
   position: absolute;
   right: 0;
-  top: 0.85rem;
+  top: 0.7rem;
   .loginText{
     color: black;
     display: inline-block;
@@ -1443,7 +1465,7 @@ HEADER
   li{
     display: inline-block;
     text-transform: capitalize;
-    margin: 0 0 0 1.5rem;
+    margin: 0 1rem;
     /* min-width: 90px; */
     text-align: center;
     a, button{
@@ -1529,8 +1551,8 @@ HEADER
   }
 }
 
-.makeCallBtn{
-  background: #333333;
+a.makeCallBtn{
+  /* background: #333333;
   @include border-radius($element-border-radius);
   padding: .3rem .8rem;
   color: white;
@@ -1538,11 +1560,15 @@ HEADER
   vertical-align: middle;
   left: 0rem;
   top: .8rem;
+  position: absolute; */
+  left: 0rem;
+  top: 1.1rem;
   position: absolute;
+  /* color:  white; */
 }
 
-.makeCallBtn:hover{
-  background: #212121;
+a.makeCallBtn:hover{
+  /* color: #212121; */
 }
 
 
@@ -1738,7 +1764,7 @@ inside header
 .rightContent-insideNavMenu{
   position: absolute;
   right: 0;
-  top: .85rem;
+  top: .65rem;
   .rightMenu-navHeader{
     margin: 0;
     li{
@@ -2540,9 +2566,9 @@ IMAGES
 
 .logo-header{
   cursor: pointer;
-  background-image: url(<%= image_path 'lettering_black_xxl.png' %>);
-  width: 77px;
-  height: 24px;
+  /* background-image: url(<%= image_path 'lettering_black_xxl.png' %>); */
+  width: 33px;
+  height: 22px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
   @include breakpoint(small down){ 
