--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -998,18 +998,20 @@ Event Card
   position: relative;
   display: inline-block;
   width: 478px;
-  height: 280px;
+  height: 14.25rem;
   box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.6);
-  @include border-radius(5px);
+  @include border-radius($element-border-radius);
   border-left: 6px solid;
   .header-eventCard{
-    padding: 8px 12px 0 12px;
+    padding: 8px 12px;
     position: relative;
     .baseline-eventCard{
       font-size: $almostNormalSize;
     }
     h6{
       margin: 0;
+      font-weight: bold;
+      display: inline-block;
     }
     .baseline-eventCard{
       margin-bottom: 9px;
@@ -1086,6 +1088,12 @@ Event Card
     position: absolute;
     right: 6px;
     top: 6px;
+    a{
+      color: $grey-2;
+    }
+    a:hover{
+      color: rgba(222,222,222,.8);
+    }
   }
   @include breakpoint(750px down){
     width: 100%;
