--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -7,6 +7,7 @@ WELCOME PAGE
 main.mainWelcomePage{
   margin: 0;
   padding: 0;
+  margin-top: -.5rem;
   section{
     /* padding-top:3.3rem; */
     padding-bottom: 1.8rem;
@@ -592,11 +593,12 @@ User Section
 main.mainUserPage{
   margin: 0;
   padding: 0;
+  margin-top: -.5rem;
   section{
     /* padding-top:3.3rem; */
-    min-height: -moz-calc(100vh - 1.8rem);
-    min-height: -webkit-calc(100vh - 1.8rem);
-    min-height: calc(100vh - 1.8rem);
+    min-height: -moz-calc(100vh - 1.8rem - 4.5rem);
+    min-height: -webkit-calc(100vh - 1.8rem - 4.5rem);
+    min-height: calc(100vh - 1.8rem - 4.5rem);
   }
 }
 
