--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -70,7 +70,9 @@ html, body{
 body {
  /* overflow: hidden !important; */
   top: 0;
+  left: 0;
   position: absolute;
+  width: 100%;
 }
 
 
@@ -82,16 +84,17 @@ html{
 main {
   padding-top:1.8rem;
   padding-bottom:1.8rem;
-  min-height: -moz-calc(100vh - 5.1rem);
-  min-height: -webkit-calc(100vh - 5.1rem);
-  min-height: calc(100vh - 5.1rem);
+  min-height: -moz-calc(100vh - 1.8rem - 4.5rem);
+  min-height: -webkit-calc(100vh - 1.8rem - 4.5rem);
+  min-height: calc(100vh - 1.8rem - 4.5rem);
   @include breakpoint(small down){
     padding-top:1.6rem;
   }
 }
 
 header, footer, main{
-  width: 100vw !important;
+  /* width: 100vw !important; */
+  overflow: hidden;
 /*   @include breakpoint(medium down){
     width: calc(100vw - 2rem) !important;
   } */
@@ -114,6 +117,7 @@ a.profileCard:hover{
     max-height: 100%;
     display: block;
     position: relative;
+    width: 100%;
 }
 
 .very-fast {
@@ -1141,7 +1145,7 @@ Event Card
 .outer-eventCard-container-userPage{
   @include breakpoint(750px up){
     position: relative;
-    height: 280px;
+    height: 14.25rem;
     width: 100%;
     .eventCard-container-userPage{
       @include horizontal-center;
@@ -1154,7 +1158,7 @@ Event Card
   display: inline-block;
   @include breakpoint(750px up){
     position: relative;
-    height: 280px;
+    height: 14.25rem;
     /* width: 100%; */
   }
   .eventCard-container-welcomePage{
@@ -1341,7 +1345,7 @@ HEADER
 
 .orfheoHeader{
   width: 100%;
-  background-color: white;
+  /* background-color: white; */
   top: 0;
   margin: auto;
   font-size: $almostNormalSize;
@@ -1361,7 +1365,7 @@ HEADER
 
 .upperContainerHeader{
   width: 100vw;
-  height: 2.8rem;
+  height: 3rem;
   z-index: 2;
 }
 
@@ -1376,19 +1380,38 @@ HEADER
 }
 
 .navBarHeader{
-  height: 4.2rem;
+  height: 5rem;
   position: relative;
   width: 100%;
-  padding-top: 2.5rem;
+  padding-top: 2.8rem;
+}
+
+.navBarContainer{
+  height: 1.7rem;
 }
 
 .logoBtn-navHeader{
   display: inline-block;
   @include horizontal-center;
-  margin-top: 0.7rem;
+  margin-top: 0.8rem;
   position: relative;
   button{
     margin: 0;
+  }
+}
+
+.logo-header{
+  cursor: pointer;
+  /* background-image: url(<%= image_path 'lettering_black_xxl.png' %>); */
+  width: 34px;
+  height: 23px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  @include breakpoint(small down){ 
+    width: 66px;
+    height: 20px;
+    margin-bottom:0.6rem;
+    margin-top: 0.1rem;
   }
 }
 
@@ -1403,20 +1426,26 @@ HEADER
   height: 59px;
   @include horizontal-center;
   z-index: -1;
-  position: relative;
 }
 
 .semiCircleHeaderTop{
-  top: -8px;
+  top: -5px;
+  position: relative;
 }
 
 .semiCircleHeaderBottom{
-  top: -26px;
+  bottom: -1px;
 }
 
 .semiCircleHeaderTop-container{
   width: 100vw;
   position: fixed;
+}
+
+.semiCircleHeaderBottom-container{
+  height: .3rem;
+  position: relative;
+  width: 100vw;
 }
 
 .container-loginNavHeader{
@@ -1577,6 +1606,27 @@ a.makeCallBtn{
 
 a.makeCallBtn:hover{
   /* color: #212121; */
+}
+
+.dropdownHeaderMenu{
+  margin: 0;
+  width: 100%;
+  li{
+    width: 100%;
+  }
+  .separator{
+    width: 95%;
+    border-bottom: 1px solid $grey-1;
+    margin: 0 auto;
+  }
+  .circleProfile-MenuHeader{
+    @include border-radius(50%);
+    width: .6rem;
+    height: .6rem;
+    margin-right: .5rem;
+    display: inline-block;
+    vertical-align: middle;
+  }
 }
 
 
@@ -2570,23 +2620,6 @@ IMAGES
   margin-bottom: 1.5rem;
   /* margin-top: -2rem; */
 }
-
-
-.logo-header{
-  cursor: pointer;
-  /* background-image: url(<%= image_path 'lettering_black_xxl.png' %>); */
-  width: 33px;
-  height: 22px;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  @include breakpoint(small down){ 
-    width: 66px;
-    height: 20px;
-    margin-bottom:0.6rem;
-    margin-top: 0.1rem;
-  }
-}
-
 
 table.dataTable thead .sorting_asc {
     background-image: url(<%= image_path 'sort_asc.png' %>);
