--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1429,7 +1429,7 @@ HEADER
 }
 
 .semiCircleHeaderTop{
-  top: -5px;
+  /* top: -5px; */
   position: relative;
 }
 
@@ -1439,7 +1439,15 @@ HEADER
 
 .semiCircleHeaderTop-container{
   width: 100vw;
-  position: fixed;
+  top: -5px;
+  z-index: -1;
+}
+
+.semicirclePositionRelative{
+  position: relative;
+  margin-top: -48px;
+  z-index: -1;
+  /* margin-bottom: -3.2rem; */
 }
 
 .semiCircleHeaderBottom-container{
@@ -1467,7 +1475,7 @@ HEADER
 .loginContainer{
   position: absolute;
   right: 0;
-  top: 0.7rem;
+  top: 0.75rem;
   .loginText{
     color: black;
     display: inline-block;
@@ -1588,7 +1596,7 @@ HEADER
   }
 }
 
-a.makeCallBtn{
+.makeCallBtn{
   /* background: #333333;
   @include border-radius($element-border-radius);
   padding: .3rem .8rem;
@@ -1599,8 +1607,9 @@ a.makeCallBtn{
   top: .8rem;
   position: absolute; */
   left: 0rem;
-  top: 1.1rem;
+  top: 1.15rem;
   position: absolute;
+  display: inline-block;
   /* color:  white; */
 }
 
@@ -1822,7 +1831,7 @@ inside header
 .rightContent-insideNavMenu{
   position: absolute;
   right: 0;
-  top: .65rem;
+  top: .7rem;
   .rightMenu-navHeader{
     margin: 0;
     li{
@@ -1860,8 +1869,24 @@ inside header
   }
 }
 
+/*==============================================
+MAIN
+===============================================*/
 
+@media only screen and #{breakpoint(medium)} {
 
+.outsider-main{
+  margin-top: 3rem;
+  .section-content{
+    margin-bottom: $pard-grid-spacing;
+  }
+}
+
+}
+
+.inside-main{
+  margin-top: -.7rem;
+}
 
 /*==============================================
 FOOTER
