min with for table box

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1972,6 +1972,7 @@ Program Manager Tab
 .table-box-call-manager{
   position: relative;
   min-height: 90vh;
+  min-width: 960px;
 }
 
 .time-table-call-manager{
