--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -84,9 +84,9 @@ html{
 main {
   padding-top:1.8rem;
   padding-bottom:1.8rem;
-  min-height: -moz-calc(100vh - 1.8rem - 4.5rem);
-  min-height: -webkit-calc(100vh - 1.8rem - 4.5rem);
-  min-height: calc(100vh - 1.8rem - 4.5rem);
+  min-height: -moz-calc(100vh - 1.8rem - 3rem);
+  min-height: -webkit-calc(100vh - 1.8rem - 3rem);
+  min-height: calc(100vh - 1.8rem - 3rem);
   @include breakpoint(small down){
     padding-top:1.6rem;
   }
@@ -1380,7 +1380,7 @@ HEADER
 }
 
 .navBarHeader{
-  height: 5rem;
+  height: 6rem;
   position: relative;
   width: 100%;
   padding-top: 2.8rem;
@@ -1429,7 +1429,7 @@ HEADER
 }
 
 .semiCircleHeaderTop{
-  /* top: -5px; */
+  top: 4px;
   position: relative;
 }
 
@@ -1451,7 +1451,7 @@ HEADER
 }
 
 .semiCircleHeaderBottom-container{
-  height: .3rem;
+  height: .55rem;
   position: relative;
   width: 100vw;
 }
