nesCard publisher and logo in  footer

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -375,7 +375,7 @@ main.mainWelcomePage, main.mainUserPage{
 
 .newsCard-welcomePage-container{
   display: inline-block;
-  margin: 1rem 1.05rem;
+  margin: 1rem 1.05rem 1.5rem 1.05rem;
 }
 
 .callText-WelcomePage{
