--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1413,6 +1413,7 @@ HEADER
   width: 100vw;
   height: 3rem;
   z-index: 2;
+  overflow: hidden;
 }
 
 .containerHeader{
@@ -1436,6 +1437,20 @@ HEADER
   height: 1.7rem;
 }
 
+.fixedNavBar{
+  position: fixed;
+  top: 0;
+/*   height: 0rem;
+  overflow: hidden; */
+}
+
+.showNavBar{
+  position: fixed;
+  top: 0;
+  height: 5.5rem;
+  overflow: hidden;
+}
+
 .logoBtn-navHeader{
   display: inline-block;
   @include horizontal-center;
@@ -1445,6 +1460,25 @@ HEADER
     margin: 0;
   }
 }
+
+.showNavMenu-header{
+  color: white;
+  @include horizontal-center;
+  top: 3rem;
+  .material-icons{
+    font-size: 19px;
+  }
+}
+
+.hideNavMenu-header{
+  color: white;
+  @include horizontal-center;
+  top: -.4rem;
+  .material-icons{
+    font-size: 19px;
+  }
+}
+
 
 .logo-header{
   cursor: pointer;
