--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -313,13 +313,13 @@ main.mainWelcomePage, main.mainUserPage{
 }
 
 .search-input-WelcomePage-Container{
-  height: 120px;
-  /* background-color: black; */
+  height: 9rem;
+  background-color: $grey-4;
   position: relative;
   padding-top: 2rem;
-  /* .select2-container--default .select2-selection--multiple{
+  .select2-container--default .select2-selection--multiple{
     border: none;
-  } */
+  }
 }
 
 .search-input-WelcomePage{
@@ -327,12 +327,12 @@ main.mainWelcomePage, main.mainUserPage{
   @include horizontal-center;
   position: relative;
   ul.select2-selection__rendered{
-    padding: 0 2rem 0 3.6rem !important;
+    padding: 0 2rem 0 3.4rem !important;
   }
 }
 
 
-.rfhIcon-searchWidget{
+/* .rfhIcon-searchWidget{
   background-image: url(<%= image_path 'logo_black_m.png' %>);
   width: 1.7rem;
   height: 1.2rem;
@@ -340,9 +340,9 @@ main.mainWelcomePage, main.mainUserPage{
   background-size: 100% 100%;
   margin-top: 0.5rem;
   margin-left: 0.5rem;
-}
+} */
 
-.rfhIcon-searchWidget-container{
+/* .rfhIcon-searchWidget-container{
   width: 3rem;
   height: 100%;
   display: inline-block;
@@ -351,7 +351,27 @@ main.mainWelcomePage, main.mainUserPage{
   top: 0.1rem;
   height: 2.2rem;
   border-right: 1px solid $grey-2;
-  /* margin: .3rem 0 1.2rem 0; */
+}
+ */
+
+.searchIcon-searchWidget-container{
+  width: 2.6rem;
+  height: 100%;
+  display: inline-block;
+  position: absolute;
+  left: 0rem;
+  top: 0.1rem;
+  height: 2.2rem;
+  border-right: 1px solid $grey-2;
+  .material-icons{
+    margin: .3rem;
+    font-size: 1.9rem;
+    color:  $grey-4;
+    transform: scaleX(-1);
+    -moz-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    -ms-transform: scaleX(-1);
+  }
 }
 
 .cleanIcon-searchWidget-container{
