--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1418,7 +1418,6 @@ HEADER
   margin: auto;
   font-size: $almostNormalSize;
   z-index: 3;
-  position: relative;
   /* min-height: 5rem; */
   @include breakpoint(medium down){
     padding: 0.5rem;
@@ -1435,6 +1434,7 @@ HEADER
   width: 100vw;
   height: 3rem;
   z-index: 2;
+  top:0;
 }
 
 .containerHeader{
@@ -1452,6 +1452,7 @@ HEADER
   position: relative;
   width: 100vw;
   padding-top: 2.8rem;
+  z-index:1;
 }
 
 .navBarContainer{
@@ -1486,6 +1487,7 @@ HEADER
   color: white;
   @include horizontal-center;
   top: 3rem;
+  z-index:2;
   .material-icons{
     font-size: 19px;
   }
@@ -1526,12 +1528,13 @@ HEADER
   width: 59px;
   height: 59px;
   @include horizontal-center;
-  z-index: -1;
+  
 }
 
 .semiCircleHeaderTop{
   top: 4px;
   position: relative;
+  z-index: 2;
 }
 
 .semiCircleHeaderBottom{
@@ -1541,7 +1544,7 @@ HEADER
 .semiCircleHeaderTop-container{
   width: 100vw;
   top: -5px;
-  z-index: -1;
+  z-index: 1;
 }
 
 .semicirclePositionRelative{
@@ -1631,6 +1634,7 @@ HEADER
 
 .navMenuHeader-container{
   @include horizontal-center;
+  z-index: 1;
 }
 
 .signUpBtn-container{
