--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1412,6 +1412,7 @@ HEADER
 ===============================================*/
 
 .orfheoHeader{
+  position:static !important;
   width: 100%;
   /* background-color: white; */
   top: 0;
@@ -1478,6 +1479,7 @@ HEADER
   @include horizontal-center;
   margin-top: 0.8rem;
   position: relative;
+  z-index:2;
   button{
     margin: 0;
   }
@@ -1550,7 +1552,6 @@ HEADER
 .semicirclePositionRelative{
   position: relative;
   margin-top: -48px;
-  z-index: -1;
   /* margin-bottom: -3.2rem; */
 }
 
