--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -120,6 +120,13 @@ a.profileCard:hover{
     width: 100%;
 }
 
+.innerWrapperDiv{
+  width:100vw;
+  @include breakpoint(medium down){
+    width: 100%;
+  }
+}
+
 .very-fast {
   transition-duration: 150ms !important; }
 
@@ -229,43 +236,6 @@ Grid and Bar
 
 }
 
-.footer-left{
-  left:0;
-  display: inline-block;
-  position: absolute;
-  ul{
-    display: inline-block;
-  }
-  @include breakpoint(small down){
-    bottom: 1px;
-    width: 100%;
-    text-align: left;
-    .leftFooter-menu{
-      li{
-        margin-right: 5%;
-      }
-    }
-  }
-}
-.footer-right{
-  display: inline-block;
-  position: absolute;
-  right:0;
-  @include breakpoint(small down){
-    top: 5px;
-    padding-bottom: 2px;
-    width: 100%;
-    text-align: left;
-    border-bottom: 1px solid $grey-4;
-    .rightFooter-menu{
-      font-size: $smallSize;
-      li{
-        margin-right: 10%;
-        margin-left: 0;
-      }
-    }
-  }
-}
 
 .logoFooter{
   margin-right: 2rem;
@@ -1414,15 +1384,10 @@ HEADER
 .orfheoHeader{
   position:static !important;
   width: 100%;
-  /* background-color: white; */
   top: 0;
   margin: auto;
   font-size: $almostNormalSize;
   z-index: 3;
-  /* min-height: 5rem; */
-  @include breakpoint(medium down){
-    padding: 0.5rem;
-  }
 }
 .black{
   background-color: black;
@@ -1436,6 +1401,11 @@ HEADER
   height: 3rem;
   z-index: 2;
   top:0;
+  .black{
+    @include breakpoint(medium down){
+    padding: 0px 0.5rem;
+    }
+  }
 }
 
 .containerHeader{
@@ -1513,10 +1483,9 @@ HEADER
   background-repeat: no-repeat;
   background-size: 100% 100%;
   @include breakpoint(small down){ 
-    width: 66px;
+    width: 30px;
     height: 20px;
     margin-bottom:0.6rem;
-    margin-top: 0.1rem;
   }
 }
 
@@ -1586,6 +1555,13 @@ HEADER
     display: inline-block;
     vertical-align: -.4rem;
     margin-right: 1rem;
+    @include breakpoint (small down){
+      position: absolute;
+      top: 0.8rem;
+      right: 0;
+      width: 3.5rem;
+      margin: 0;
+    }
   }
   .loginText:hover{
     color: rgba(0,0,0,.8);
@@ -1616,8 +1592,10 @@ HEADER
     display: inline-block;
     text-transform: capitalize;
     margin: 0 1rem;
-    /* min-width: 90px; */
     text-align: center;
+    @include breakpoint (small down){
+      margin: 0 .5rem;
+    }
     a, button{
       color: white;
     }
@@ -1636,6 +1614,10 @@ HEADER
 .navMenuHeader-container{
   @include horizontal-center;
   z-index: 1;
+  @include breakpoint(small down){
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .signUpBtn-container{
@@ -1655,10 +1637,10 @@ HEADER
   vertical-align: middle;
   @include breakpoint(small down){
     position: absolute;
-    right: $inner-spacing;
-    top: $inner-spacing;
+    right: 0;
+    top: -.6rem;
     font-size: $almostNormalSize;
-    padding: 0.25rem 0.5rem;  
+    padding: 0.2rem 0.5rem;  
   }
 }
 
@@ -1761,6 +1743,11 @@ login
   }
   .menu-icon-header{
     margin-left:0.5rem;
+  }
+  header .menu-icon{
+    position: absolute;
+    top: 1.1rem;
+    z-index: 3;
   }
 }
 
@@ -1945,6 +1932,9 @@ inside header
     li{
       display: inline-block;
     }
+    @include breakpoint (medium down){
+      margin-right: .5rem;
+    }
   }
   .initText{
     text-align: center;
@@ -2021,24 +2011,49 @@ FOOTER
 .pard-container-relative{
   position:relative;
   width: 100%;
-  height: 1.8rem;
+  @include breakpoint(medium) {  
+    height:1.8rem;
+  }
   padding-top:0.3rem;
   @include breakpoint(small down){
-    min-height: 3rem;
+    min-height: 5.5rem;
   }
 }
 
-
-
-button.footer-text-link {
-  color: white;
-  cursor: pointer;
+.footer-left{
+  left:0;
+  display: inline-block;
+  position: absolute;
+  ul{
+    display: inline-block;
+  }
+  @include breakpoint(small down){
+    bottom: 1px;
+    width: 45%;
+    text-align: left;
+    .leftFooter-menu{
+      li{
+        display: block;
+      }
+    }
+  }
 }
-
-
-button.footer-text-link:hover{
-  color: white;
-  text-decoration: underline;
+.footer-right{
+  display: inline-block;
+  position: absolute;
+  right:0;
+  @include breakpoint(small down){
+    top: 5px;
+    padding-bottom: 2px;
+    width: 45%;
+    text-align: right;
+    .rightFooter-menu{
+      font-size: $smallSize;
+      li{
+        display: block;
+      }
+    }
+  }
 }
 
 .rightFooter-menu{
@@ -2063,6 +2078,19 @@ button.footer-text-link:hover{
     margin-right: 2rem;
   }
 }
+
+button.footer-text-link {
+  color: white;
+  cursor: pointer;
+}
+
+
+button.footer-text-link:hover{
+  color: white;
+  text-decoration: underline;
+}
+
+
 
 @media only screen and #{breakpoint(medium)} {
 
