--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -29,10 +29,12 @@ main.mainWelcomePage, main.mainUserPage{
   }
   .entryDiv{
     width: 100%;
-    height: -moz-calc(100vh - 5rem);
-    height: -webkit-calc(100vh - 5rem);
-    height: calc(100vh - 5rem);
-    min-height: 575px;
+    height: -moz-calc(100vh - 4.8rem);
+    height: -webkit-calc(100vh - 4.8rem);
+    height: calc(100vh - 4.8rem);
+    @include breakpoint(large){
+      min-height: 575px;
+    }
     position: relative;
     .entryDiv-content{
       width: 100%;
@@ -131,9 +133,17 @@ main.mainWelcomePage, main.mainUserPage{
       font-size: 24px; 
     }
   }
+  
+}
+
+.cardsContainerWelcomeDiv{
+  position:relative;
+  margin-top:2.5rem;
+  padding-bottom:1rem;
   @include breakpoint(medium down){
     display: none;
   }
+ 
 }
 
 /* 
@@ -191,24 +201,29 @@ main.mainWelcomePage, main.mainUserPage{
     margin: 0;
   }
   .welcomeSection-container{
-    padding: 2.5rem 0;
+    padding: 2.5rem .5rem;
   }
 }
 
 .actionDiv{
-  height: 25rem;
+  min-height: 22rem;
   position: relative;
   width: 100%;
   text-align: center;
   margin: 0.4rem 0;
   background: $grey-1;
   .welcomeSection-container{
-    padding: 5rem 0;
+    padding: 4rem 0;
   }
   .innerCont1, .innerCont3{
     position: absolute;
     width: 12rem;
     height: 100%;
+    @include breakpoint(small down){
+      position: relative;
+      display: block;
+      width: 100%;
+    }
   }
   .innerCont3{
     right: 0;
@@ -220,6 +235,8 @@ main.mainWelcomePage, main.mainUserPage{
     top: 0;
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    position: relative;
+    margin-bottom: .8rem;
   }
   .img1Box{
     background-image: url(<%= image_path 'icona_home_1.png' %>);
@@ -235,6 +252,7 @@ main.mainWelcomePage, main.mainUserPage{
     @include horizontal-center;
     text-align: center;
     bottom: 0;
+    position: relative;
     .txt_grey{
       font-size: $almostNormalSize;
       color: $grey-4;
@@ -248,6 +266,12 @@ main.mainWelcomePage, main.mainUserPage{
   display: inline-block;
   position: relative;
   vertical-align: top;
+  min-height: 13rem;
+  @include breakpoint(small down){
+    display: block;
+    width: 100%;
+    margin: 1rem 0;
+  }
 }
 
 
@@ -290,6 +314,10 @@ main.mainWelcomePage, main.mainUserPage{
     margin-bottom: 1.5rem;
     color: $blue-pard;
   }
+  @include breakpoint(small down){
+    width: 100%;
+    padding: 1rem;
+  }
 }
 
 .callServices-innerCont{
@@ -315,9 +343,11 @@ main.mainWelcomePage, main.mainUserPage{
 }
 
 #profilesSection .search-results-WelcomePage, #newsSection .search-results-WelcomePage{
-  text-align: center;
-  .newsCard-welcomePage-container{
-    text-align: left;
+  @include breakpoint(small down){
+    text-align: center;
+    .newsCard-welcomePage-container{
+      text-align: left;
+    }
   }
 }
 
