--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1074,7 +1074,7 @@ Event Card
   }
   .btn-container{
     position: absolute;
-    right: 6px;
+    right: 13px;
     top: 6px;
     a{
       color: $grey-2;
@@ -1167,16 +1167,17 @@ Event Card
 
 .manageCallIcon{
   position: relative;
-  width: 1.5rem;
-  height: 1.5rem;
-  z-index: 2;
+  width: 1rem;
+  height: 1rem;
+  z-index: 1;
+  display: inline-block;
   .callIcon{
-    font-size: 0.6rem;
+    font-size: 60%;
     position: absolute;
-    left: 0.9rem;
+    left: 90%;
   }
   .toolsIcon{
-    font-size: 1.2rem;
+    font-size: 120%;
     position: absolute;
   }
 }
@@ -1260,7 +1261,7 @@ newsCard
 }
 
 .imagePopup-cardNews{
-  height: 363px;
+  height: auto;
   margin-bottom: 1rem;
 }
 
@@ -1375,6 +1376,42 @@ ul.dropdownMenu{
   width: 15rem;
   left: -10.5rem !important;
   top: 2rem !important;
+}
+
+.eventMananagerChoice{
+  background-color: #fefefe;
+  border: 1px solid #cacaca;
+  /* border-radius: 0.125rem; */
+  display: block;
+  font-size: $almostNormalSize;
+  /* padding: 1rem; */
+  position: absolute;
+  visibility: hidden;
+  width: 7rem;
+  z-index: 10;
+  right: 0;
+  ul{
+    margin-left: 0;
+  }
+  li a{
+    padding: .4rem !important;
+  }
+  .manageCallIcon{ 
+    font-size: 11px;
+    margin-right: .4rem;
+    vertical-align: middle;
+    .callIcon {
+      left: 60%;
+    }
+  }
+  .eventIcon{
+    font-size: 14px;
+    margin-right: .5rem;
+  }
+}
+
+.showEventManagerChoice{
+  visibility: visible !important;
 }
 
 /*==============================================
@@ -1544,6 +1581,9 @@ HEADER
       margin-bottom: 1rem;
     }
   }
+  @include breakpoint(small down){
+    left: -280px !important;
+  }
 }
 
 .loginContainer{
@@ -1557,8 +1597,8 @@ HEADER
     margin-right: 1rem;
     @include breakpoint (small down){
       position: absolute;
-      top: 0.8rem;
-      right: 0;
+      top: -0.2rem;
+      right: 4rem;
       width: 3.5rem;
       margin: 0;
     }
@@ -1638,7 +1678,7 @@ HEADER
   @include breakpoint(small down){
     position: absolute;
     right: 0;
-    top: -.6rem;
+    top: -.4rem;
     font-size: $almostNormalSize;
     padding: 0.2rem 0.5rem;  
   }
@@ -1659,6 +1699,7 @@ HEADER
   position: relative;
   width: 240px;
   margin-top: 2.5rem;
+  z-index: 2;
   input.input-login-field{
     width: 100%;
     display: block;
