space and organization profile modify now does not affect multimedias + profile_picture saved when creating profile

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -677,8 +677,10 @@ User Section
   
 
 .myProfilesContainer{
-  text-align: center;
+  /* text-align: center; */
+  @include horizontal-center;
   position: relative;
+  display: inline-block;
 }
 
 .createProfileCard-userPage{
