--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,19 +7,19 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Orfheo es la primera comunidad artístico-cultural donde conocer proyectos, encontrarse y crear juntos experiencias inolvidables." />
-        <meta name="keywords" content="orfheo, convocatoria, conFusión, festival, Benimaclet, valencia, arte, artistas, espacios, asociaciones, música, taller, artes escénicas, exposición, comunidad, cultura, plataforma, social, network, gestión, cultural" />
+        <meta name="description" content="Muestra y descrubre proyectos, lanza tus convocatorias, participa en grandes eventos. Crea en red: tu comunidad cultural te llama." />
+        <meta name="keywords" content="orfheo, convocatoria, eventos, organizaciones, festival, federaciones, ong, empresas, instituciones, valencia, arte, artistas, proyectos, espacios, asociaciones, música, taller, artes, escénicas, exposición, comunidad, cultura, plataforma, social, network, gestión, cultural, community, futuro, cambio, herramienta, alternativa, sostenibilidad, creación, colaboración, portfolio, vetrina, enlaces, red, colores" />
         <meta name="robots" content="index, follow" />
         <meta name="author" content="orfheo community project" />
 
         <!-- fb preview meta tags -->
         <meta property="og:image:url" content="<%= image_path 'orfheo_fb_preview.jpg' %>"/>     <!-- img 1200 x 630 (alto x ancho) -->
         <meta property="og:image:type" content="image/jpg">
-        <meta property="og:title" content="orfheo"/>
+        <meta property="og:title" content="orfheo | your cultural community"/>
         <meta property="og:url" content="http://www.orfheo.org"/>
         <meta property="og:site_name" content="orfheo"/>
         <meta property="og:type" content="website"/>
-        <meta property="og:description" content="Orfheo es la primera comunidad artístico-cultural donde conocer proyectos, encontrarse y crear juntos experiencias inolvidables."/>
+        <meta property="og:description" content="Muestra y descrubre proyectos, lanza tus convocatorias, participa en grandes eventos. Crea en red: tu comunidad cultural te llama."/>
 
         <!-- favicon -->
         <link rel='shortcut icon' href="<%= image_path 'logo_favicon.ico' %>" type='image/png'/>
