message contact form

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -2294,6 +2294,7 @@ button.footer-text-link:hover{
   .submit-button{
     float:  right;
     background: $green-pard;
+    margin-left: 1rem;
   }
   .list-col{
     ul{
