sentMessage Services implemented

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1936,6 +1936,14 @@ div.dataTables_wrapper div.dataTables_filter{
   margin-right: -0.1rem;
 }
 
+.success-icon-check-messageSent{
+  color: $green-pard !important;
+  font-size: 1.5rem;
+  vertical-align: -0.2rem;
+  margin-right: 0.2rem;
+}
+}
+
 .success-check-call-manager{
   color: $green-pard;
   display: inline-block;
