welcome page design definitive

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -20,6 +20,11 @@ main.mainWelcomePage, main.mainUserPage{
   }
 }
 
+.title-welcome{
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
 
 .welcomeSection-layout{
   width: 100%;
@@ -149,51 +154,7 @@ main.mainWelcomePage, main.mainUserPage{
  
 }
 
-/* 
-.smallCard-slide {
-  width: 110px;
-  height: 144.5px;
-  z-index: 1;
-  margin: 0.1rem 0.7rem;
-  opacity: 0.85;
-  a{
-    font-size: 8.3px;
-    cursor: default;
-  }
-  .icon-profileCircle .material-icons{
-    font-size: 14px;
-  }
-}
-.mediumCard-slide{
-  width: 146px;
-  height: 191px;
-  margin: 1.2rem -1.2rem 0 -1.2rem;
-  z-index: 2;
-  opacity: 0.95;
-  a{
-    font-size: 10.5px;
-    cursor: default;
-  }
-  .icon-profileCircle .material-icons{
-    font-size: 20px;
-  }
-}
-.normalCard-slide{
-  width: 174px;
-  height: 228px;
-  margin: 0;
-  z-index: 3;
-  margin-top: 0.5rem;
-  opacity: 1;
-  a {
-    font-size: 12px;
-    cursor: pointer;
-  }
-  .icon-profileCircle .material-icons{
-    font-size: 24px; 
-  }
-}
- */
+
 .littleTextDiv{
   position: relative;
   text-align: center;
@@ -204,9 +165,10 @@ main.mainWelcomePage, main.mainUserPage{
     margin: 0;
   }
   .welcomeSection-container{
-    padding: 2.5rem .5rem;
+    padding: 4rem .5rem;
   }
 }
+
 
 .actionDiv{
   min-height: 22rem;
@@ -282,7 +244,7 @@ main.mainWelcomePage, main.mainUserPage{
   margin-top: 0.4rem;
   background-color: black;
   color: white;
-  padding: 3rem 0;
+  padding: 4rem 0;
   .logo-services{
     background-image: url(<%= image_path 'lettering_white_xl.png' %>);
     width: 144px;
@@ -304,24 +266,33 @@ main.mainWelcomePage, main.mainUserPage{
   }
 }
 
-.callServices-innerCont, .consulingService-innerCont, .apiService-innerCont{
-  width: 16rem;
-  text-align: center;
+.servicesDiv{
   p{
-    font-size: $almostNormalSize;
-    margin: 0;
     color: $grey-2;
   }
+  .servicesWelcome-icon{
+    color: $blue-pard;
+  }
+}
+
+.callServices-innerCont, .consulingService-innerCont, .apiService-innerCont, {
+  width: 16rem;
+  text-align: center;
   .material-icons{
     font-size: 3.5rem;
     margin-bottom: 1.5rem;
-    color: $blue-pard;
+  }
+  p{
+    font-size: $almostNormalSize;
+    margin: 0;
   }
   @include breakpoint(small down){
     width: 100%;
     padding: 1rem;
   }
 }
+
+
 
 .callServices-innerCont{
   left: 0;
@@ -382,28 +353,6 @@ main.mainWelcomePage, main.mainUserPage{
   }
 }
 
-
-/* .rfhIcon-searchWidget{
-  background-image: url(<%= image_path 'logo_black_m.png' %>);
-  width: 1.7rem;
-  height: 1.2rem;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  margin-top: 0.5rem;
-  margin-left: 0.5rem;
-} */
-
-/* .rfhIcon-searchWidget-container{
-  width: 3rem;
-  height: 100%;
-  display: inline-block;
-  position: absolute;
-  left: 0rem;
-  top: 0.1rem;
-  height: 2.2rem;
-  border-right: 1px solid $grey-2;
-}
- */
 
 .searchIcon-searchWidget-container{
   width: 2.6rem;
@@ -481,9 +430,26 @@ main.mainWelcomePage, main.mainUserPage{
   margin-top: 1.5rem;
 }
 
-.signUpBtnWelcomePage:hover{
+.signUpBtnWelcomePage:hover, .profilesBtn-welcomePage:hover{
   background: rgb(44, 106, 204);
   /* rgba(56, 133, 255, 0.8); */
+}
+
+.profilesBtn-welcomePage-Container{
+  text-align: center;
+  margin-top: 4rem;
+}
+
+.profilesBtn-welcomePage{
+  @include border-radius($element-border-radius);
+  background: $blue-pard;
+  padding: .4rem 1.8rem;
+  color: $element-color;
+  font-weight: bold;
+}
+
+.profileTypeBox-welcomePage{
+  margin: 3rem 0 2rem 0;
 }
 
 
