--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -826,13 +826,13 @@ Profile Card
   margin:0 auto;
   font-size: 12px;
   border: 1px solid rgba(10, 10, 10, 0.2);
-  @include breakpoint(medium){
+  @include breakpoint(500){
     width: 174px;
     height: 14.25rem;
     /* padding: 3px; */
   }
   
-  @include breakpoint(small down) {
+  @include breakpoint(500 down) {
     width: 35vw;
     height: 44vw;
     padding: 1px;
@@ -2224,7 +2224,7 @@ button.footer-text-link:hover{
 
 .header-contactInfo{
   width: 100%;
-  height: 7rem;
+  min-height: 7rem;
   background-color: $blue-pard;
   position: relative;
   padding: 1rem;
@@ -2256,6 +2256,10 @@ button.footer-text-link:hover{
     cursor: pointer;
     min-width: 122px;
     text-align: center;
+    @include breakpoint(small down){
+     font-size: $almostNormalSize;
+     /* min-width: 0; */
+    }
   }
   .selected, li:hover{
     font-weight: bold;
@@ -2290,6 +2294,10 @@ button.footer-text-link:hover{
     width: 50%;
     display: inline-block;
     vertical-align: top;
+    @include breakpoint(small down){
+      width: 100%;
+      display: block;
+    }
   }
   .submit-button{
     float:  right;
