--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -2250,7 +2250,8 @@ button.footer-text-link:hover{
   position: relative;
   width: 100%;
   text-align: center;
-  margin-top: 0.3rem;
+  margin-top: .9rem;
+  margin-bottom: -.9rem;
   li{
     margin: 0 0.2rem;
     display: inline-block;
@@ -2301,7 +2302,9 @@ button.footer-text-link:hover{
     }
   }
   .submit-button{
-    float:  right;
+    position: absolute;
+    right: 0;
+    top: 0;
     background: $green-pard;
     margin-left: 1rem;
   }
@@ -2338,7 +2341,7 @@ button.footer-text-link:hover{
     margin-left: 1rem;
   }
   .contactForm-container{
-    margin-top: 2rem;
+    margin-top: 1.5rem;
     @include horizontal-center;
     position: relative;
     @include breakpoint(large){
@@ -2421,6 +2424,23 @@ select:-moz-focusring { color: transparent;
   color: red;
   font-size: $almostNormalSize;
   min-height: 1.5rem;
+}
+
+.contactForm-container{
+  p{
+    margin-bottom: 0;
+  }
+  .error-text{
+    display: inline-block;
+  }
+}
+
+.error-text{
+  display: inline-block;
+}
+
+.half-col .error-text{
+  vertical-align: -2rem;
 }
 
 .error-multimedia-text{
